# openinterp-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: citation-tracker.yml
docs/: integration-claude-code.md  integration-cline.md  integration-cursor.md  quick-start.md  secrets.md  self-hosted.md
docs/challenges/: q3-2026-sleeper-agents-replication.md
docs/community/: discord-setup.md
openinterp_mcp/: __init__.py  client.py  server.py  sessions.py
openinterp_mcp/atlas/: __init__.py  citations.py  digest.py  embeddings.py  search.py  vector_store.py
openinterp_mcp/colab/: __init__.py  causality.py  endpoints.py  hooks.py  launch.py  manifest.py  positions.py  probes.py  sae.py  secrets.py  state.py  steering.py  tunnel.py
openinterp_mcp/discord/: __init__.py  webhook.py
openinterp_mcp/judge/: __init__.py  _runtime.py  adversarial.py  ci.py  methodology.py  reproduce.py
openinterp_mcp/publish/: __init__.py  api.py  bibtex.py  hf_dataset.py  manifest.py  registry_pr.py  zenodo.py
skills/capture-acts/: SKILL.md
skills/causality-protocol/: SKILL.md
skills/colab-attach/: SKILL.md
skills/colab-status/: SKILL.md
skills/list-probes/: SKILL.md
skills/probe-eval/: SKILL.md
skills/sae-lookup/: SKILL.md
skills/steer/: SKILL.md
templates/: dev_session.ipynb  research.ipynb
tests/: test_causality_v2.py  test_phase1_scaffold.py
